[gd_scene load_steps=13 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://bg.jpg" type="Texture" id=2]
[ext_resource path="res://HoverCubic.tres" type="StyleBox" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.890196, 0.847059, 0.682353, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.854902, 0.670588, 0.513726, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.258824, 0.243137, 0.243137, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.854902, 0.670588, 0.513726, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.258824, 0.243137, 0.243137, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.854902, 0.670588, 0.513726, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.258824, 0.243137, 0.243137, 1 )

[sub_resource type="StyleBoxFlat" id=8]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.890196, 0.776471, 0.682353, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 4.0
margin_bottom = 5.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = -2.0
margin_right = 1025.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Sprite" parent="."]
position = Vector2( 511.762, 300.14 )
scale = Vector2( 0.931896, 1.16718 )
texture = ExtResource( 2 )

[node name="Quadratic" type="Button" parent="."]
margin_left = 384.0
margin_top = 83.0
margin_right = 636.0
margin_bottom = 183.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.890196, 0.847059, 0.682353, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Quadratic Graph"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cubic" type="Button" parent="."]
margin_left = 385.0
margin_top = 195.0
margin_right = 635.0
margin_bottom = 288.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.890196, 0.847059, 0.682353, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Cubic Graph"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sinus" type="Button" parent="."]
margin_left = 386.0
margin_top = 409.0
margin_right = 637.0
margin_bottom = 504.0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.890196, 0.847059, 0.682353, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Sinus Graph"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cosinus" type="Button" parent="."]
margin_left = 384.558
margin_top = 300.673
margin_right = 636.558
margin_bottom = 394.673
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.890196, 0.847059, 0.682353, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Cosinus Graph"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Identitas" type="TextEdit" parent="."]
margin_left = 30.0
margin_top = 453.0
margin_right = 252.0
margin_bottom = 565.0
custom_styles/read_only = ExtResource( 3 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_colors/font_color = Color( 0.258824, 0.243137, 0.243137, 1 )
custom_colors/word_highlighted_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_readonly = Color( 0, 0, 0, 1 )
text = "		
				Farra Jessica
				 191524008
						2A 
		D4 Teknik Informatika"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main Menu" type="TextEdit" parent="."]
margin_left = 406.661
margin_top = 12.3529
margin_right = 612.661
margin_bottom = 37.3529
custom_styles/read_only = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "				Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Quadratic" to="." method="_on_Quadratic_pressed"]
[connection signal="pressed" from="Cubic" to="." method="_on_Cubic_pressed"]
[connection signal="pressed" from="Sinus" to="." method="_on_Sinus_pressed"]
[connection signal="pressed" from="Cosinus" to="." method="_on_Cosinus_pressed"]
